src/objects/Examination__c.object
<CustomObject>
    <description>An examination is essentially an instance of a test for an exam taker.  When a new examination is created, it contains a copy of all the questions from the test form that make up the test.  Examinations may be performed in practice mode.</description>
    <fields>
        <fullName>Examination_Status__c</fullName>
        <description>The examination status indicates whether an examination is New, In Progress, or Completed.</description>
        <label>Examination Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Examination_Taker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The examination taker field indicates the person taking the examination.</description>
        <label>Examination Taker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Examinations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Form__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The test form field indicates the test form that this examination was created from.</description>
        <label>Test Form</label>
        <referenceTo>Test_Form__c</referenceTo>
        <relationshipLabel>Examinations</relationshipLabel>
        <relationshipName>Examinations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Examination</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Examination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Examinations</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Require_Examination_Taker</fullName>
        <active>true</active>
        <description>Examination Taker is required.</description>
        <errorConditionFormula>ISBLANK(Examination_Taker__c)</errorConditionFormula>
        <errorDisplayField>Examination_Taker__c</errorDisplayField>
        <errorMessage>Examination Taker is required.</errorMessage>
    </validationRules>
</CustomObject>